# BitMix

./: .gitmodules  Cargo.toml  README.md
contracts/src/: BitMix.sol
elf/: riscv32im-succinct-zkvm-elf
inputs/: main.go  test_1.json
lib/: Cargo.toml
lib/src/: btc.rs  lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
sp1-contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
