[package]
name = "btc_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sha2 = { version = "0.10.8" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
libsecp256k1 = { version = "0.7.1" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
libsecp256k1-patch = { git = "https://github.com/sp1-patches/rust-secp256k1", package = "libsecp256k1", branch = "patch-v0.29.1-v4.0.0" }

[dependencies.once_cell]
version = "1.19.0"
features = ["critical-section"]
